option('sqlite',
  type: 'feature',
  value: 'auto',
  description: 'SQLite database backend'
)
option('synctex',
  type: 'feature',
  value: 'auto',
  description: 'SyncTeX integration'
)
option('magic',
  type: 'feature',
  value: 'auto',
  description: 'magic-based MIME type detection'
)
option('seccomp',
  type: 'feature',
  value: 'auto',
  description: 'seccomp-based sandbox'
)
)
